feat(youtube): split helpers into package; add OAuth console helper; refresh README instructions

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 # secrets / runtime state
 .env
 data/
+
+# local dev env and misc
+.venv/
+.pip-empty.conf
+Here’s
+
+# Python cache
+__pycache__/
+*.pyc
