fix: switch YouTube OAuth to loopback flow; add host networking and user mapping in Compose; document HOST_UID/GID

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,9 @@ OAUTH_PORT=8080                   # can change if needed
 # --------- Watchtower (optional) ---------
 WATCHTOWER_TELEGRAM_TOKEN=
 WATCHTOWER_TELEGRAM_CHAT_ID=
+
+# --------- Docker runtime (optional) ---------
+# If you hit permissions writing ./data from the container, set these so the
+# container runs as your host user/group. Typical default on Raspberry Pi is 1000:1000.
+# HOST_UID=1000
+# HOST_GID=1000
